--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -1,6 +1,6 @@
-<% if @feed_items.any? %>
+<% if @items.any? %>
   <ol class="posts">
-    <%= render partial: 'shared/feed_item', collection: @feed_items %>
+    <%= render partial: 'shared/item', collection: @items %>
   </ol>
-  <%= will_paginate @feed_items %>
+  <%= will_paginate @items %>
 <% end %>
