--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,34 @@
 <h1><%= @post.title %></h1>
 <p><%= @post.content %></p>
-<small><%= @post.created_at %></small>
+<small>Created at: <%= @post.created_at %></small>
+
+ 
+<center><h3>Comments</h3></center>
+<% @post.comments.each do |comment| %>
+  <p>
+    <strong>Title:</strong>
+    <%= comment.commenter %>
+  </p>
+ 
+  <p>
+    <strong>Comment:</strong>
+    <%= comment.body %>
+  </p>
+	<hr>
+<% end %>
+ 
+<h3>Add a comment:</h3>
+<%= form_for([@post, @post.comments.build]) do |f| %>
+  <p>
+    <%= f.text_field :commenter, placeholder: "Enter a title..."  %>
+  </p>
+  <p>
+    <%= f.text_area :body, placeholder: "Compose new comment..."  %>
+  </p>
+  <p>
+    <%= f.submit "Submit comment", class: "btn btn-large btn-primary" %>
+  </p>
+<% end %>
+ 
+<%= link_to 'Edit Post', edit_post_path(@post) %> |
+<%= link_to 'Back to Posts', '/' %>
